update readme.md, add github link

--- a/analysis/qmd/analysis.qmd
+++ b/analysis/qmd/analysis.qmd
@@ -580,3 +580,7 @@ In conclusion, this project not only showcases the practical application of mach
 * Deploy Streamlit app to a cloud platform.
 * Continue learning how to integrate FastAPI with web applications.
 
+---
+
+Reproducible code is available on Github.ink
+
